--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,23 +50,25 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = "2.3.0-rc01"
+    implementation 'androidx.paging:paging-runtime-ktx:2.1.2'
+    def lifecycle_version = "2.3.0"
     def arch_version = "2.1.0"
-    def activity_version = "1.2.0-rc01"
+    def activity_version = "1.3.0-alpha02"
     def gson_version = "2.8.6"
-    def room_version = "2.2.6"
-    def hilt_view_model_version = '1.0.0-alpha02'
+    def room_version = "2.3.0-beta01"
+    def hilt_view_model_version = '1.0.0-alpha03'
     def assisted_inject_version = '0.6.0'
-    def work_version = '2.4.0'
+    def work_version = '2.5.0'
+    def paging_version = "3.0.0-beta01"
 
     compileOnly "com.squareup.inject:assisted-inject-annotations-dagger2:$assisted_inject_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation "androidx.room:room-testing:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     testImplementation "android.arch.core:core-testing:$arch_version"
@@ -78,9 +80,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
 
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
-    implementation 'androidx.fragment:fragment-ktx:1.3.0-rc01'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
     implementation "com.google.code.gson:gson:$gson_version"
     implementation "androidx.activity:activity-ktx:$activity_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -89,6 +91,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_view_model_version"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    implementation "androidx.paging:paging-compose:1.0.0-alpha07"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
