--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,11 +55,12 @@ dependencies {
     def arch_version = "2.1.0"
     def activity_version = "1.3.0-alpha02"
     def gson_version = "2.8.6"
-    def room_version = "2.3.0-beta01"
+    def room_version = "2.3.0-beta02"
     def hilt_view_model_version = '1.0.0-alpha03'
     def assisted_inject_version = '0.6.0'
     def work_version = '2.5.0'
     def paging_version = "3.0.0-beta01"
+    def glide_version = "4.12.0"
 
     compileOnly "com.squareup.inject:assisted-inject-annotations-dagger2:$assisted_inject_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -92,8 +93,10 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_view_model_version"
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
-    implementation "androidx.paging:paging-compose:1.0.0-alpha07"
+    implementation "androidx.paging:paging-compose:1.0.0-alpha08"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
