--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,11 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.yoji.motivation"
@@ -26,8 +24,8 @@ android {
     }
 
     buildFeatures {
-        dataBinding = true
-        viewBinding = true
+        dataBinding true
+        viewBinding true
     }
 
     buildTypes {
@@ -37,11 +35,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
 
         // Enable Coroutines and Flow APIs
         freeCompilerArgs += "-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi"
@@ -50,23 +48,24 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.paging:paging-runtime-ktx:2.1.2'
-    def lifecycle_version = "2.3.0"
-    def arch_version = "2.1.0"
-    def activity_version = "1.3.0-alpha02"
-    def gson_version = "2.8.6"
-    def room_version = "2.3.0-beta02"
-    def hilt_view_model_version = '1.0.0-alpha03'
-    def assisted_inject_version = '0.6.0'
-    def work_version = '2.5.0'
-    def paging_version = "3.0.0-beta01"
+    implementation 'androidx.paging:paging-runtime-ktx:3.0.0'
+    def lifecycle_version = "2.3.1"
+    def arch_version = "1.1.1"
+    def activity_version = "1.3.0-rc01"
+    def gson_version = "2.8.7"
+    def room_version = "2.4.0-alpha03"
+    def hilt_view_model_version = "1.0.0-alpha03"
+    def assisted_inject_version = '0.8.1'
+    def work_version = '2.7.0-alpha04'
+    def paging_version = "3.0.0"
     def glide_version = "4.12.0"
+    def hilt_version = "2.37"
 
     compileOnly "com.squareup.inject:assisted-inject-annotations-dagger2:$assisted_inject_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
@@ -77,13 +76,13 @@ dependencies {
     androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
     implementation "androidx.work:work-runtime-ktx:$work_version"
     androidTestImplementation "androidx.work:work-testing:$work_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
-    implementation 'androidx.fragment:fragment-ktx:1.3.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.fragment:fragment-ktx:1.3.5'
     implementation "com.google.code.gson:gson:$gson_version"
     implementation "androidx.activity:activity-ktx:$activity_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -93,7 +92,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_view_model_version"
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
-    implementation "androidx.paging:paging-compose:1.0.0-alpha08"
+    implementation "androidx.paging:paging-compose:1.0.0-alpha11"
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
