--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'dagger.hilt.android.plugin'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+}
 
 android {
     compileSdkVersion 30
@@ -18,14 +20,16 @@ android {
 
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments["dagger.hilt.disableModulesHaveInstallInCheck"] = "true"
+                arguments += [
+                        "dagger.hilt.disableModulesHaveInstallInCheck": "true"
+                ]
             }
         }
     }
 
     buildFeatures {
-        dataBinding true
-        viewBinding true
+        dataBinding = true
+        viewBinding = true
     }
 
     buildTypes {
@@ -45,22 +49,30 @@ android {
         freeCompilerArgs += "-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi"
         freeCompilerArgs += "-Xopt-in=kotlinx.coroutines.FlowPreview"
     }
+    kapt {
+        javacOptions {
+            // These options are normally set automatically via the Hilt Gradle plugin, but we
+            // set them manually to workaround a bug in the Kotlin 1.5.20
+            option("-Adagger.fastInit=ENABLED")
+            option("-Adagger.hilt.android.internal.disableAndroidSuperclassValidation=true")
+        }
+    }
+
 }
 
 dependencies {
-    implementation 'androidx.paging:paging-runtime-ktx:3.0.0'
     def lifecycle_version = "2.3.1"
-    def arch_version = "1.1.1"
+    def arch_version = "2.1.0"
     def activity_version = "1.3.0-rc01"
     def gson_version = "2.8.7"
     def room_version = "2.4.0-alpha03"
-    def hilt_view_model_version = "1.0.0-alpha03"
+    def hilt_view_model_version = '1.0.0-alpha03'
     def assisted_inject_version = '0.8.1'
-    def work_version = '2.7.0-alpha04'
-    def paging_version = "3.0.0"
+    def work_version = '2.5.0'
+    def paging_version = "3.0.0-beta01"
     def glide_version = "4.12.0"
-    def hilt_version = "2.37"
 
+    implementation 'androidx.paging:paging-runtime-ktx:3.0.0'
     compileOnly "com.squareup.inject:assisted-inject-annotations-dagger2:$assisted_inject_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
@@ -71,7 +83,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation "androidx.room:room-testing:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    testImplementation "android.arch.core:core-testing:$arch_version"
+    testImplementation "androidx.arch.core:core-testing:$arch_version"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
     androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
     implementation "androidx.work:work-runtime-ktx:$work_version"
