--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 32
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.yoji.motivation"
         minSdkVersion 26
-        targetSdkVersion 30
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
 
@@ -29,7 +29,7 @@ android {
 
     buildFeatures {
         dataBinding = true
-        viewBinding = true
+        viewBinding true
     }
 
     buildTypes {
@@ -61,56 +61,85 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = "2.3.1"
-    def arch_version = "2.1.0"
-    def activity_version = "1.3.0-rc01"
+    def core_version = "1.7.0"
+    def appcompat_version = "1.4.1"
+    def junit_version = "4.13.2"
+    def junit_ext_version = "1.1.3"
+    def activity_version = "1.6.0-alpha01"
+    def fragment_version = "1.4.1"
+    def constraintlayout_version = "2.1.3"
+    def material_version = "1.5.0"
+    def legacy_version = "1.0.0"
+    def espresso_version = "3.4.0"
+    def datastore_version = "1.0.0"
+    def lifecycle_version = "2.5.0-alpha06"
+    def lifecycle_extensions_version = "2.2.0"
     def gson_version = "2.8.7"
-    def room_version = "2.4.0-alpha03"
-    def hilt_view_model_version = '1.0.0-alpha03'
-    def assisted_inject_version = '0.8.1'
-    def work_version = '2.5.0'
-    def paging_version = "3.0.0-beta01"
+    def navigation_version = "2.4.2"
+    def room_version = "2.5.0-alpha01"
+    def hilt_view_model_version = "1.0.0-alpha03"
+    def assisted_inject_version = "0.8.1"
+    def paging_version = "3.1.1"
+    def paging_compose_version = "1.0.0-alpha14"
     def glide_version = "4.12.0"
+    def work_version = "2.7.1"
+    def arch_version = "2.1.0"
+    def leakcanary_version = "2.7"
 
-    implementation 'androidx.paging:paging-runtime-ktx:3.0.0'
-    compileOnly "com.squareup.inject:assisted-inject-annotations-dagger2:$assisted_inject_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation "androidx.room:room-testing:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    testImplementation "androidx.arch.core:core-testing:$arch_version"
-    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
-    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
-    implementation "androidx.work:work-runtime-ktx:$work_version"
-    androidTestImplementation "androidx.work:work-testing:$work_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
-
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    implementation 'androidx.fragment:fragment-ktx:1.3.5'
-    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "androidx.core:core-ktx:$core_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
     implementation "androidx.activity:activity-ktx:$activity_version"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    implementation "com.google.android.material:material:$material_version"
+    implementation "androidx.legacy:legacy-support-v4:$legacy_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+
+    implementation "androidx.datastore:datastore:$datastore_version"
+    implementation "androidx.datastore:datastore-preferences:$datastore_version"
+
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_view_model_version"
-    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
-    implementation "androidx.paging:paging-compose:1.0.0-alpha11"
-    implementation "com.github.bumptech.glide:glide:$glide_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_extensions_version"
+
+    implementation "com.google.code.gson:gson:$gson_version"
+
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
+
+    implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
+    implementation "androidx.room:room-paging:$room_version"
+
+    implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_view_model_version"
     kapt "androidx.hilt:hilt-compiler:$hilt_view_model_version"
+
     kapt "com.squareup.inject:assisted-inject-processor-dagger2:$assisted_inject_version"
+    compileOnly "com.squareup.inject:assisted-inject-annotations-dagger2:$assisted_inject_version"
+
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    implementation "androidx.paging:paging-compose:$paging_compose_version"
+
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+    androidTestImplementation "androidx.work:work-testing:$work_version"
+
+    testImplementation "androidx.arch.core:core-testing:$arch_version"
+
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakcanary_version"
 }
