--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,19 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
+    id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
 }
+apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.yoji.motivation"
         minSdkVersion 26
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -61,26 +62,26 @@ android {
 }
 
 dependencies {
-    def core_version = "1.7.0"
-    def appcompat_version = "1.4.1"
+    def core_version = "1.9.0"
+    def appcompat_version = "1.5.1"
     def junit_version = "4.13.2"
     def junit_ext_version = "1.1.3"
-    def activity_version = "1.6.0-alpha01"
-    def fragment_version = "1.4.1"
-    def constraintlayout_version = "2.1.3"
-    def material_version = "1.5.0"
+    def activity_version = "1.6.0-rc02"
+    def fragment_version = "1.5.2"
+    def constraintlayout_version = "2.1.4"
+    def material_version = "1.6.1"
     def legacy_version = "1.0.0"
     def espresso_version = "3.4.0"
     def datastore_version = "1.0.0"
-    def lifecycle_version = "2.5.0-alpha06"
+    def lifecycle_version = "2.6.0-alpha02"
     def lifecycle_extensions_version = "2.2.0"
-    def gson_version = "2.8.7"
-    def navigation_version = "2.4.2"
-    def room_version = "2.5.0-alpha01"
+    def gson_version = "2.9.1"
+    def navigation_version = "2.5.2"
+    def room_version = "2.5.0-alpha03"
     def hilt_view_model_version = "1.0.0-alpha03"
     def assisted_inject_version = "0.8.1"
     def paging_version = "3.1.1"
-    def paging_compose_version = "1.0.0-alpha14"
+    def paging_compose_version = "1.0.0-alpha16"
     def glide_version = "4.12.0"
     def work_version = "2.7.1"
     def arch_version = "2.1.0"
@@ -123,7 +124,7 @@ dependencies {
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
     androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
 
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_view_model_version"
+//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_view_model_version"
     kapt "androidx.hilt:hilt-compiler:$hilt_view_model_version"
 
     kapt "com.squareup.inject:assisted-inject-processor-dagger2:$assisted_inject_version"
